Re-organized all lang files (and left english placeholders for the missing ones)

--- a/src/main/resources/assets/veggiesdelight/lang/es_es.json
+++ b/src/main/resources/assets/veggiesdelight/lang/es_es.json
@@ -1,61 +1,89 @@
 {
+  "creativetab.veggiesdelight_tab": "Delicia Vegetal",
+
   "item.veggiesdelight.bellpepper": "Pimiento",
-  "item.veggiesdelight.smoked_bellpepper": "Pimiento Ahumado",
-  "item.veggiesdelight.cacciatore": "Cazador",
-  "item.veggiesdelight.shakshouka": "Shakshouka",
-  "item.veggiesdelight.stuffed_bellpeppers": "Pimientos Rellenos",
-  "item.veggiesdelight.bellpepper_seeds": "Semillas de Pimiento",
-  "item.veggiesdelight.uncooked_mhadjeb": "Mhadjeb Crudo",
-  "item.veggiesdelight.mhadjeb": "Mhadjeb",
-  "item.veggiesdelight.vegan_pizza_slice": "Porción de Pizza Vegana",
-
+  "item.veggiesdelight.broccoli": "Broccoli",
   "item.veggiesdelight.cauliflower": "Coliflor",
-  "item.veggiesdelight.cauliflower_seeds": "Semillas de Coliflor",
-  "item.veggiesdelight.cauliflower_floret": "Ramillete de Coliflor",
-  "item.veggiesdelight.fried_cauliflower_floret": "Ramillete de Coliflor Frito",
-  "item.veggiesdelight.cauliflower_patty": "Hamburguesa de Coliflor",
-  "item.veggiesdelight.cooked_cauliflower_patty": "Hamburguesa de Coliflor Cocida",
-  "item.veggiesdelight.cauliflower_soup": "Sopa de Coliflor",
-  "item.veggiesdelight.cauliflower_burger": "Hamburguesa de Coliflor",
-
-  "item.veggiesdelight.sweet_potato": "Batata",
-  "item.veggiesdelight.baked_sweet_potato": "Batata Horneada",
-  "item.veggiesdelight.mashed_potatoes": "Puré de Patatas",
-  "item.veggiesdelight.sweet_potato_pie_slice": "Porción de Tarta de Batata",
-  "item.veggiesdelight.potato_noodle": "Fideo de Patata",
-  "item.veggiesdelight.potato_noodles": "Fideos de Patata",
-
+  "item.veggiesdelight.dandelion_leaf": "Hoja de Diente de León",
   "item.veggiesdelight.garlic": "Ajo",
-  "item.veggiesdelight.garlic_clove": "Diente de Ajo",
-  "item.veggiesdelight.roasted_garlic_clove": "Diente de Ajo Asado",
-  "item.veggiesdelight.garlic_bread": "Pan de Ajo",
-  "item.veggiesdelight.garlic_rice_with_cauliflower": "Arroz con Ajo y Coliflor",
-  "item.veggiesdelight.garlic_chicken_stew": "Estofado de Pollo con Ajo",
-  "item.veggiesdelight.garlic_baked_cod": "Bacalao al Horno con Ajo",
-  "item.veggiesdelight.cesar_salad": "Ensalada César",
-  "item.veggiesdelight.fermented_garlic_honey": "Miel de Ajo Fermentada",
+  "item.veggiesdelight.sweet_potato": "Batata",
+  "item.veggiesdelight.turnip": "Turnip",
+  "item.veggiesdelight.zucchini": "Zucchini",
+
+  "item.veggiesdelight.bellpepper_seeds": "Semillas de Pimiento",
+  "item.veggiesdelight.broccoli_seeds": "Broccoli Seeds",
+  "item.veggiesdelight.cauliflower_seeds": "Semillas de Coliflor",
+  "item.veggiesdelight.turnip_seeds": "Turnip Seeds",
+  "item.veggiesdelight.zucchini_seeds": "Zucchini seeds",
 
   "block.veggiesdelight.bellpepper_crate": "Cajón de Pimientos",
+  "block.veggiesdelight.broccoli_crate": "Broccoli Crate",
   "block.veggiesdelight.cauliflower_crate": "Cajón de Coliflor",
   "block.veggiesdelight.garlic_crate": "Cajón de Ajo",
   "block.veggiesdelight.sweet_potato_crate": "Cajón de Batata",
+  "block.veggiesdelight.turnip_crate": "Turnip Crate",
+  "block.veggiesdelight.zucchini_crate": "Zucchini Crate",
 
-  "item.veggiesdelight.beetroot_brownie": "Brownie de Remolacha",
-  "item.veggiesdelight.carrot_juice": "Zumo de Zanahoria",
-  "item.veggiesdelight.dandelion_juice": "Zumo de Diente de León",
-  "item.veggiesdelight.dandelion_leaf": "Hoja de Diente de León",
-
-  "block.veggiesdelight.vegan_pizza": "Pizza Vegana",
-  "block.veggiesdelight.sweet_potato_pie": "Tarta de Batata",
-  "block.veggiesdelight.beetroot_brownie_tray": "Bandeja de Brownie de Remolacha",
-
-  "block.veggiesdelight.mature_dandelion": "Diente de León Maduro",
   "block.veggiesdelight.wild_bellpeppers": "Pimientos silvestre",
+  "block.veggiesdelight.wild_broccoli": "Wild Broccoli",
   "block.veggiesdelight.wild_cauliflowers": "Coliflores silvestre",
   "block.veggiesdelight.wild_garlic": "Ajo silvestre",
   "block.veggiesdelight.wild_sweet_potatoes": "Batatas silvestre",
+  "block.veggiesdelight.wild_turnips": "Wild Turnips",
+  "block.veggiesdelight.wild_zucchinis": "Wild Zucchinis",
+  "block.veggiesdelight.mature_dandelion": "Diente de León Maduro",
 
-  "creativetab.veggiesdelight_tab": "Delicia Vegetal",
+
+  "item.veggiesdelight.cacciatore": "Cazador",
+  "item.veggiesdelight.chicken_fajitas_wrap": "Chicken Fajitas Wrap",
+  "item.veggiesdelight.mhadjeb": "Mhadjeb",
+  "item.veggiesdelight.shakshouka": "Shakshouka",
+  "item.veggiesdelight.smoked_bellpepper": "Pimiento Ahumado",
+  "item.veggiesdelight.stuffed_bellpeppers": "Pimientos Rellenos",
+  "item.veggiesdelight.uncooked_mhadjeb": "Mhadjeb Crudo",
+  "block.veggiesdelight.vegan_pizza": "Pizza Vegana",
+  "item.veggiesdelight.vegan_pizza_slice": "Porción de Pizza Vegana",
+
+  "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
+  "item.veggiesdelight.cauliflower_burger": "Hamburguesa de Coliflor",
+  "item.veggiesdelight.cauliflower_floret": "Ramillete de Coliflor",
+  "item.veggiesdelight.cauliflower_patty": "Hamburguesa de Coliflor",
+  "item.veggiesdelight.cauliflower_soup": "Sopa de Coliflor",
+  "item.veggiesdelight.cooked_cauliflower_patty": "Hamburguesa de Coliflor Cocida",
+  "item.veggiesdelight.fried_cauliflower_floret": "Ramillete de Coliflor Frito",
+  "item.veggiesdelight.whole_roasted_cauliflower": "Whole Roasted Cauliflower",
+
+  "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
+  "item.veggiesdelight.dandelion_juice": "Zumo de Diente de León",
+
+  "item.veggiesdelight.cesar_salad": "Ensalada César",
+  "item.veggiesdelight.fermented_garlic_honey": "Miel de Ajo Fermentada",
+  "item.veggiesdelight.garlic_baked_cod": "Bacalao al Horno con Ajo",
+  "item.veggiesdelight.garlic_bread": "Pan de Ajo",
+  "item.veggiesdelight.garlic_chicken_stew": "Estofado de Pollo con Ajo",
+  "item.veggiesdelight.garlic_clove": "Diente de Ajo",
+  "item.veggiesdelight.garlic_rice_with_cauliflower": "Arroz con Ajo y Coliflor",
+  "item.veggiesdelight.garlic_stuffed_mushrooms": "Garlic Stuffed Mushrooms",
+  "item.veggiesdelight.roasted_garlic_clove": "Diente de Ajo Asado",
+
+  "item.veggiesdelight.baked_sweet_potato": "Batata Horneada",
+  "item.veggiesdelight.mashed_potatoes": "Puré de Patatas",
+  "item.veggiesdelight.potato_noodle": "Fideo de Patata",
+  "item.veggiesdelight.potato_noodles": "Fideos de Patata",
+  "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
+  "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
+  "item.veggiesdelight.sweet_potato_mochi": "Sweet Potato Mochi",
+  "item.veggiesdelight.sweet_potato_pie": "Tarta de Batata",
+  "item.veggiesdelight.sweet_potato_pie_slice": "Porción de Tarta de Batata",
+
+  "item.veggiesdelight.beetroot_brownie": "Brownie de Remolacha",
+  "block.veggiesdelight.beetroot_brownie_tray": "Bandeja de Brownie de Remolacha",
+  "block.veggiesdelight.carrot_cake": "Carrot Cake",
+  "item.veggiesdelight.carrot_cake_slice": "Zumo de Zanahoria",
+  "item.veggiesdelight.carrot_juice": "Zumo de Zanahoria",
+  "item.veggiesdelight.fish_and_chips": "Fish And Chips",
+  "item.veggiesdelight.roasted_vegetables": "Roasted Vegetables",
+
 
   "veggiesdelight.advancement.root": "Delicia Vegetal",
   "veggiesdelight.advancement.root.desc": "¡Ve a por tus verduras!",
@@ -80,6 +108,9 @@
 
   "veggiesdelight.advancement.cauliflower": "La forma vegana",
   "veggiesdelight.advancement.cauliflower.desc": "Fríe un ramillete de coliflor, el pollo frito vegano",
+
+  "veggiesdelight.advancement.cupcake": "Cupcake",
+  "veggiesdelight.advancement.cupcake.desc": "Make a cupcake out of sweet potatoes",
 
   "veggiesdelight.advancement.pie": "Porción de vida",
   "veggiesdelight.advancement.pie.desc": "Hornea una tarta de batata",
