--- a/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
+++ b/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
@@ -1,58 +1,89 @@
 {
-  "item.veggiesdelight.bellpepper": "Poivron",
-  "item.veggiesdelight.smoked_bellpepper": "Poivron Fumé",
-  "item.veggiesdelight.cacciatore": "Cacciatore",
-  "item.veggiesdelight.shakshouka": "Shakshouka",
-  "item.veggiesdelight.stuffed_bellpeppers": "Poivrons Farcis",
-  "item.veggiesdelight.bellpepper_seeds": "Graines de Poivron",
-  "item.veggiesdelight.uncooked_mhadjeb": "Mhadjeb Non Cuit",
-  "item.veggiesdelight.mhadjeb": "Mhadjeb",
-
-  "item.veggiesdelight.cauliflower": "Chou-Fleur",
-  "item.veggiesdelight.cauliflower_seeds": "Graines de Chou-Fleur",
-  "item.veggiesdelight.cauliflower_floret": "Fleur de Chou-Fleur",
-  "item.veggiesdelight.fried_cauliflower_floret": "Fleur de Chou-Fleur Frite",
-  "item.veggiesdelight.cauliflower_patty": "Galette de Chou-Fleur",
-  "item.veggiesdelight.cooked_cauliflower_patty": "Galette de Chou-Fleur Cuite",
-  "item.veggiesdelight.cauliflower_soup": "Soupe de Chou-Fleur",
-  "item.veggiesdelight.cauliflower_burger": "Burger de Chou-Fleur",
-
-  "item.veggiesdelight.sweet_potato": "Patate Douce",
-  "item.veggiesdelight.baked_sweet_potato": "Patate Douce Rôtie",
-  "item.veggiesdelight.mashed_potatoes": "Purée de Pommes de Terre",
-  "item.veggiesdelight.sweet_potato_pie_slice": "Part de Tarte à la Patate Douce",
-  "item.veggiesdelight.potato_noodle": "Nouilles de Pommes de Terre",
-  "item.veggiesdelight.potato_noodles": "Nouilles de Pommes de Terre",
-
-  "block.veggiesdelight.bellpepper_crate": "Caisse de Poivrons",
-  "block.veggiesdelight.cauliflower_crate": "Caisee de Choux-Fleurs",
-  "block.veggiesdelight.sweet_potato_crate": "Caisee de Patates Douces",
-  "block.veggiesdelight.garlic_crate": "Caisse d'ails",
-
-  "item.veggiesdelight.garlic": "Ail",
-  "item.veggiesdelight.garlic_clove": "Gousse d'Ail",
-  "item.veggiesdelight.roasted_garlic_clove": "Gousse d'Ail Rôtie",
-  "item.veggiesdelight.garlic_bread": "Pain à l'Ail",
-  "item.veggiesdelight.garlic_rice_with_cauliflower": "Riz à l'Ail avec Chou-fleur",
-  "item.veggiesdelight.garlic_chicken_stew": "Ragoût de Poulet à l'Ail",
-  "item.veggiesdelight.garlic_baked_cod": "Morue à l'Ail au Four",
-  "item.veggiesdelight.cesar_salad": "Salade César",
-  "item.veggiesdelight.fermented_garlic_honey": "Ail Fermenté Au Miel",
-
-  "item.veggiesdelight.beetroot_brownie": "Brownie Aux Betterave",
-  "item.veggiesdelight.carrot_juice": "Jus De Carotte",
-  "item.veggiesdelight.dandelion_juice": "Jus De Pissenlit",
-  "item.veggiesdelight.dandelion_leaf": "Feuille De Pissenlit",
-
-  "block.veggiesdelight.wild_bellpeppers": "Poivrons Sauvages",
-  "block.veggiesdelight.wild_cauliflowers": "Choux-Fleurs Sauvages",
-  "block.veggiesdelight.wild_sweet_potatoes": "Patates Douces Sauvages",
-  "block.veggiesdelight.wild_garlic": "Ails Sauvages",
-
   "creativetab.veggiesdelight_tab": "Veggies Delight",
 
+
+  "item.veggiesdelight.bellpepper": "Poivron",
+  "item.veggiesdelight.broccoli": "Broccoli",
+  "item.veggiesdelight.cauliflower": "Chou-Fleur",
+  "item.veggiesdelight.dandelion_leaf": "Feuille De Pissenlit",
+  "item.veggiesdelight.garlic": "Ail",
+  "item.veggiesdelight.sweet_potato": "Patate Douce",
+  "item.veggiesdelight.turnip": "Turnip",
+  "item.veggiesdelight.zucchini": "Zucchini",
+
+  "item.veggiesdelight.bellpepper_seeds": "Graines de Poivron",
+  "item.veggiesdelight.broccoli_seeds": "Broccoli Seeds",
+  "item.veggiesdelight.cauliflower_seeds": "Graines de Chou-Fleur",
+  "item.veggiesdelight.turnip_seeds": "Turnip Seeds",
+  "item.veggiesdelight.zucchini_seeds": "Zucchini seeds",
+
+  "block.veggiesdelight.bellpepper_crate": "Caisse de Poivrons",
+  "block.veggiesdelight.broccoli_crate": "Broccoli Crate",
+  "block.veggiesdelight.cauliflower_crate": "Caisee de Choux-Fleurs",
+  "block.veggiesdelight.garlic_crate": "Caisse d'ails",
+  "block.veggiesdelight.sweet_potato_crate": "Caisee de Patates Douces",
+  "block.veggiesdelight.turnip_crate": "Turnip Crate",
+  "block.veggiesdelight.zucchini_crate": "Zucchini Crate",
+
+  "block.veggiesdelight.wild_bellpeppers": "Poivrons Sauvages",
+  "block.veggiesdelight.wild_broccoli": "Wild Broccoli",
+  "block.veggiesdelight.wild_cauliflowers": "Choux-Fleurs Sauvages",
+  "block.veggiesdelight.wild_garlic": "Ails Sauvages",
+  "block.veggiesdelight.wild_sweet_potatoes": "Patates Douces Sauvages",
+  "block.veggiesdelight.wild_turnips": "Wild Turnips",
+  "block.veggiesdelight.wild_zucchinis": "Wild Zucchinis",
+  "block.veggiesdelight.mature_dandelion": "Mature Pissenlit",
+
+  "item.veggiesdelight.cacciatore": "Cacciatore",
+  "item.veggiesdelight.chicken_fajitas_wrap": "Chicken Fajitas Wrap",
+  "item.veggiesdelight.mhadjeb": "Mhadjeb",
+  "item.veggiesdelight.shakshouka": "Shakshouka",
+  "item.veggiesdelight.smoked_bellpepper": "Poivron Fumé",
+  "item.veggiesdelight.stuffed_bellpeppers": "Poivrons Farcis",
+  "item.veggiesdelight.uncooked_mhadjeb": "Mhadjeb Non Cuit",
   "block.veggiesdelight.vegan_pizza": "Pizza Végétalienne",
-  "block.veggiesdelight.sweet_potato_pie": "Tarte à la Patate Douce",
+  "item.veggiesdelight.vegan_pizza_slice": "Vegan Pizza Slice",
+
+  "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
+  "item.veggiesdelight.cauliflower_burger": "Burger de Chou-Fleur",
+  "item.veggiesdelight.cauliflower_floret": "Fleur de Chou-Fleur",
+  "item.veggiesdelight.cauliflower_patty": "Galette de Chou-Fleur",
+  "item.veggiesdelight.cauliflower_soup": "Soupe de Chou-Fleur",
+  "item.veggiesdelight.cooked_cauliflower_patty": "Galette de Chou-Fleur Cuite",
+  "item.veggiesdelight.fried_cauliflower_floret": "Fleur de Chou-Fleur Frite",
+  "item.veggiesdelight.whole_roasted_cauliflower": "Whole Roasted Cauliflower",
+
+  "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
+  "item.veggiesdelight.dandelion_juice": "Jus De Pissenlit",
+
+  "item.veggiesdelight.cesar_salad": "Salade César",
+  "item.veggiesdelight.fermented_garlic_honey": "Ail Fermenté Au Miel",
+  "item.veggiesdelight.garlic_baked_cod": "Morue à l'Ail au Four",
+  "item.veggiesdelight.garlic_bread": "Pain à l'Ail",
+  "item.veggiesdelight.garlic_chicken_stew": "Ragoût de Poulet à l'Ail",
+  "item.veggiesdelight.garlic_clove": "Gousse d'Ail",
+  "item.veggiesdelight.garlic_rice_with_cauliflower": "Riz à l'Ail avec Chou-fleur",
+  "item.veggiesdelight.garlic_stuffed_mushrooms": "Garlic Stuffed Mushrooms",
+  "item.veggiesdelight.roasted_garlic_clove": "Gousse d'Ail Rôtie",
+
+  "item.veggiesdelight.baked_sweet_potato": "Patate Douce Rôtie",
+  "item.veggiesdelight.mashed_potatoes": "Purée de Pommes de Terre",
+  "item.veggiesdelight.potato_noodle": "Nouilles de Pommes de Terre",
+  "item.veggiesdelight.potato_noodles": "Nouilles de Pommes de Terre",
+  "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
+  "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
+  "item.veggiesdelight.sweet_potato_mochi": "Sweet Potato Mochi",
+  "item.veggiesdelight.sweet_potato_pie": "Tarte à la Patate Douce",
+  "item.veggiesdelight.sweet_potato_pie_slice": "Part de Tarte à la Patate Douce",
+
+  "item.veggiesdelight.beetroot_brownie": "Brownie Aux Betterave",
+  "block.veggiesdelight.beetroot_brownie_tray": "Brownie Tray",
+  "block.veggiesdelight.carrot_cake": "Carrot Cake",
+  "item.veggiesdelight.carrot_cake_slice": "Jus De Carotte",
+  "item.veggiesdelight.carrot_juice": "Jus De Carotte",
+  "item.veggiesdelight.fish_and_chips": "Fish And Chips",
+  "item.veggiesdelight.roasted_vegetables": "Roasted Vegetables",
+
 
   "veggiesdelight.advancement.root": "Veggies Delight",
   "veggiesdelight.advancement.root.desc": "Allez chercher vos légumes !",
@@ -78,6 +109,9 @@
   "veggiesdelight.advancement.cauliflower": "Végétarisme",
   "veggiesdelight.advancement.cauliflower.desc": "Faites frire des fleurs de chou-fleur, le poulet frit végétalien",
 
+  "veggiesdelight.advancement.cupcake": "Cupcake",
+  "veggiesdelight.advancement.cupcake.desc": "Make a cupcake out of sweet potatoes",
+
   "veggiesdelight.advancement.pie": "Slice Of Life",
   "veggiesdelight.advancement.pie.desc": "Préparez une tarte à la patate douce",
 
@@ -86,7 +120,6 @@
 
   "veggiesdelight.advancement.cesar": "CAEEEEEEESAAAAAR",
   "veggiesdelight.advancement.cesar.desc": "Préparez une Salade César",
-
 
   "veggiesdelight.advancement.bellpepper_master": "Dr. Pepper",
   "veggiesdelight.advancement.bellpepper_master.desc": "Préparez toutes sortes de plats en utilisant des poivrons",
