--- a/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
+++ b/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
@@ -1,75 +1,89 @@
 {
+  "creativetab.veggiesdelight_tab": "Veggies Delight",
+
   "item.veggiesdelight.bellpepper": "Болгарский перец",
-  "item.veggiesdelight.smoked_bellpepper": "Копченый болгарский перец",
-  "item.veggiesdelight.cacciatore": "Каччиаторе",
-  "item.veggiesdelight.shakshouka": "Шакшука",
-  "item.veggiesdelight.stuffed_bellpeppers": "Фаршированный болгарский перец",
-  "item.veggiesdelight.bellpepper_seeds": "Семена болгарского перца",
-  "item.veggiesdelight.uncooked_mhadjeb": "Сырой мхаджеб",
-  "item.veggiesdelight.mhadjeb": "Мхаджеб",
-  "item.veggiesdelight.vegan_pizza_slice": "Кусочек веганской пиццы",
-  "item.veggiesdelight.steak_fajitas": "Фахитас с говядиной",
-  "item.veggiesdelight.chicken_fajitas_wrap": "Фахитас с курицей",
-
+  "item.veggiesdelight.broccoli": "Broccoli",
   "item.veggiesdelight.cauliflower": "Цветная капуста",
-  "item.veggiesdelight.cauliflower_seeds":"Семена цветной капусты",
-  "item.veggiesdelight.cauliflower_floret": "Соцветия цветной капусты",
-  "item.veggiesdelight.fried_cauliflower_floret": "Жареные соцветия цветной капусты",
-  "item.veggiesdelight.cauliflower_bread": "Хлеб из цветной капусты",
-  "item.veggiesdelight.cauliflower_patty": "Котлета из цветной капусты",
-  "item.veggiesdelight.cooked_cauliflower_patty": "Котлета из вареной цветной капусты",
-  "item.veggiesdelight.cauliflower_soup": "Суп из цветной капусты",
-  "item.veggiesdelight.cauliflower_burger": "Бургер с цветной капустой",
-  "item.veggiesdelight.whole_roasted_cauliflower": "Целая запечённая цветная капуста",
-
-  "item.veggiesdelight.sweet_potato": "Батат",
-  "item.veggiesdelight.baked_sweet_potato": "Запеченный батат",
-  "item.veggiesdelight.mashed_potatoes": "Картофельное пюре",
-  "item.veggiesdelight.sweet_potato_dough": "Тесто из батата",
-  "item.veggiesdelight.sweet_potato_cupcake": "Кекс из батата",
-  "item.veggiesdelight.sweet_potato_mochi": "Моти из батата",
-  "item.veggiesdelight.sweet_potato_pie_slice": "Кусочек пирога с бататом",
-  "item.veggiesdelight.potato_noodle": "Нить картофельной лапшы",
-  "item.veggiesdelight.potato_noodles": "Картофельная лапша",
-
+  "item.veggiesdelight.dandelion_leaf": "Листик одуванчика",
   "item.veggiesdelight.garlic": "Чеснок",
-  "item.veggiesdelight.garlic_clove": "Зубчик чеснока",
-  "item.veggiesdelight.roasted_garlic_clove": "Запеченный зубчик чеснока",
-  "item.veggiesdelight.garlic_bread": "Чесночный хлеб",
-  "item.veggiesdelight.garlic_rice_with_cauliflower": "Чесночный рис с цветной капустой",
-  "item.veggiesdelight.garlic_chicken_stew": "Тушеная курица с чесноком",
-  "item.veggiesdelight.garlic_baked_cod": "Запеченная треска с чесноком",
-  "item.veggiesdelight.cesar_salad": "Салат Цезарь",
-  "item.veggiesdelight.fermented_garlic_honey": "Ферментированный чесночный мед",
-  "item.veggiesdelight.garlic_stuffed_mushrooms": "Грибы, фаршированные чесноком",
+  "item.veggiesdelight.sweet_potato": "Батат",
+  "item.veggiesdelight.turnip": "Turnip",
+  "item.veggiesdelight.zucchini": "Zucchini",
+
+  "item.veggiesdelight.bellpepper_seeds": "Семена болгарского перца",
+  "item.veggiesdelight.broccoli_seeds": "Broccoli Seeds",
+  "item.veggiesdelight.cauliflower_seeds": "Семена цветной капусты",
+  "item.veggiesdelight.turnip_seeds": "Turnip Seeds",
+  "item.veggiesdelight.zucchini_seeds": "Zucchini seeds",
 
   "block.veggiesdelight.bellpepper_crate": "Ящик болгарского перца",
+  "block.veggiesdelight.broccoli_crate": "Broccoli Crate",
   "block.veggiesdelight.cauliflower_crate": "Ящик цветной капусты",
   "block.veggiesdelight.garlic_crate": "Ящик чеснока",
   "block.veggiesdelight.sweet_potato_crate": "Ящик батата",
+  "block.veggiesdelight.turnip_crate": "Turnip Crate",
+  "block.veggiesdelight.zucchini_crate": "Zucchini Crate",
 
-  "item.veggiesdelight.dandelion_juice": "Сок из одуванчика",
-  "item.veggiesdelight.dandelion_leaf": "Листик одуванчика",
-  "item.veggiesdelight.dandelion_and_eggs": "Зелень одуванчика с яичницей",
-
-  "item.veggiesdelight.beetroot_brownie": "Свекольный брауни",
-  "item.veggiesdelight.carrot_juice": "Морковный сок",
-  "block.veggiesdelight.carrot_cake": "Морковный пирог",
-  "item.veggiesdelight.carrot_cake_slice": "Кусочек морковного пирога",
-  "item.veggiesdelight.fish_and_chips": "Рыба с жареным картофелем",
-  "item.veggiesdelight.roasted_vegetables": "Запеченные овощи",
-
-  "block.veggiesdelight.vegan_pizza": "Веганская пицца",
-  "block.veggiesdelight.sweet_potato_pie": "Пирог из батата",
-  "block.veggiesdelight.beetroot_brownie_tray": "Лоток с брауни из свёклы",
-
-  "block.veggiesdelight.mature_dandelion": "Спелый одуванчик",
   "block.veggiesdelight.wild_bellpeppers": "Дикий болгарский перец",
+  "block.veggiesdelight.wild_broccoli": "Wild Broccoli",
   "block.veggiesdelight.wild_cauliflowers": "Дикая цветная капуста",
   "block.veggiesdelight.wild_garlic": "Дикий чеснок",
   "block.veggiesdelight.wild_sweet_potatoes": "Дикий батат",
+  "block.veggiesdelight.wild_turnips": "Wild Turnips",
+  "block.veggiesdelight.wild_zucchinis": "Wild Zucchinis",
+  "block.veggiesdelight.mature_dandelion": "Спелый одуванчик",
 
-  "creativetab.veggiesdelight_tab": "Veggies Delight",
+
+  "item.veggiesdelight.cacciatore": "Каччиаторе",
+  "item.veggiesdelight.chicken_fajitas_wrap": "Фахитас с курицей",
+  "item.veggiesdelight.mhadjeb": "Мхаджеб",
+  "item.veggiesdelight.shakshouka": "Шакшука",
+  "item.veggiesdelight.smoked_bellpepper": "Копченый болгарский перец",
+  "item.veggiesdelight.stuffed_bellpeppers": "Фаршированный болгарский перец",
+  "item.veggiesdelight.uncooked_mhadjeb": "Сырой мхаджеб",
+  "block.veggiesdelight.vegan_pizza": "Веганская пицца",
+  "item.veggiesdelight.vegan_pizza_slice": "Кусочек веганской пиццы",
+
+  "item.veggiesdelight.cauliflower_bread": "Хлеб из цветной капусты",
+  "item.veggiesdelight.cauliflower_burger": "Бургер с цветной капустой",
+  "item.veggiesdelight.cauliflower_floret": "Соцветия цветной капусты",
+  "item.veggiesdelight.cauliflower_patty": "Котлета из цветной капусты",
+  "item.veggiesdelight.cauliflower_soup": "Суп из цветной капусты",
+  "item.veggiesdelight.cooked_cauliflower_patty": "Котлета из вареной цветной капусты",
+  "item.veggiesdelight.fried_cauliflower_floret": "Жареные соцветия цветной капусты",
+  "item.veggiesdelight.whole_roasted_cauliflower": "Целая запечённая цветная капуста",
+
+  "item.veggiesdelight.dandelion_and_eggs": "Зелень одуванчика с яичницей",
+  "item.veggiesdelight.dandelion_juice": "Сок из одуванчика",
+
+  "item.veggiesdelight.cesar_salad": "Салат Цезарь",
+  "item.veggiesdelight.fermented_garlic_honey": "Ферментированный чесночный мед",
+  "item.veggiesdelight.garlic_baked_cod": "Запеченная треска с чесноком",
+  "item.veggiesdelight.garlic_bread": "Чесночный хлеб",
+  "item.veggiesdelight.garlic_chicken_stew": "Тушеная курица с чесноком",
+  "item.veggiesdelight.garlic_clove": "Зубчик чеснока",
+  "item.veggiesdelight.garlic_rice_with_cauliflower": "Чесночный рис с цветной капустой",
+  "item.veggiesdelight.garlic_stuffed_mushrooms": "Грибы, фаршированные чесноком",
+  "item.veggiesdelight.roasted_garlic_clove": "Запеченный зубчик чеснока",
+
+  "item.veggiesdelight.baked_sweet_potato": "Запеченный батат",
+  "item.veggiesdelight.mashed_potatoes": "Картофельное пюре",
+  "item.veggiesdelight.potato_noodle": "Нить картофельной лапшы",
+  "item.veggiesdelight.potato_noodles": "Картофельная лапша",
+  "item.veggiesdelight.sweet_potato_cupcake": "Кекс из батата",
+  "item.veggiesdelight.sweet_potato_dough": "Тесто из батата",
+  "item.veggiesdelight.sweet_potato_mochi": "Моти из батата",
+  "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
+  "item.veggiesdelight.sweet_potato_pie_slice": "Кусочек пирога с бататом",
+
+  "item.veggiesdelight.beetroot_brownie": "Свекольный брауни",
+  "block.veggiesdelight.beetroot_brownie_tray": "Лоток с брауни из свёклы",
+  "block.veggiesdelight.carrot_cake": "Морковный пирог",
+  "item.veggiesdelight.carrot_cake_slice": "Кусочек морковного пирога",
+  "item.veggiesdelight.carrot_juice": "Морковный сок",
+  "item.veggiesdelight.fish_and_chips": "Рыба с жареным картофелем",
+  "item.veggiesdelight.roasted_vegetables": "Запеченные овощи",
+
 
   "veggiesdelight.advancement.root": "Veggies Delight",
   "veggiesdelight.advancement.root.desc": "Собери свои овощи!",
@@ -96,7 +110,7 @@
   "veggiesdelight.advancement.cauliflower.desc": "Приготовьте хлеб из цветной капусты",
 
   "veggiesdelight.advancement.cupcake": "Я пришёл сюда только за кексом",
-  "veggiesdelight.advancement.cupcake.desc":"Приготовьте кекс из батата",
+  "veggiesdelight.advancement.cupcake.desc": "Приготовьте кекс из батата",
 
   "veggiesdelight.advancement.pie": "Кусочек жизни",
   "veggiesdelight.advancement.pie.desc": "Испеките пирог из батата",
