--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -1,57 +1,20 @@
 {
+  "creativetab.veggiesdelight_tab": "Veggies Delight",
+
   "item.veggiesdelight.bellpepper": "Bell Pepper",
-  "item.veggiesdelight.smoked_bellpepper": "Smoked Bell Pepper",
-  "item.veggiesdelight.cacciatore": "Cacciatore",
-  "item.veggiesdelight.shakshouka": "Shakshouka",
-  "item.veggiesdelight.stuffed_bellpeppers": "Stuffed Bell Peppers",
-  "item.veggiesdelight.bellpepper_seeds": "Bell Pepper Seeds",
-  "item.veggiesdelight.uncooked_mhadjeb": "Uncooked Mhadjeb",
-  "item.veggiesdelight.mhadjeb": "Mhadjeb",
-  "item.veggiesdelight.vegan_pizza_slice": "Vegan Pizza Slice",
-  "item.veggiesdelight.steak_fajitas": "Steak Fajitas",
-  "item.veggiesdelight.chicken_fajitas_wrap": "Chicken Fajitas Wrap",
-
-  "item.veggiesdelight.cauliflower": "Cauliflower",
-  "item.veggiesdelight.cauliflower_seeds":"Cauliflower Seeds",
-  "item.veggiesdelight.cauliflower_floret": "Cauliflower Floret",
-  "item.veggiesdelight.fried_cauliflower_floret": "Fried Cauliflower Floret",
-  "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
-  "item.veggiesdelight.cauliflower_patty": "Cauliflower Patty",
-  "item.veggiesdelight.cooked_cauliflower_patty": "Cooked Cauliflower Patty",
-  "item.veggiesdelight.cauliflower_soup": "Cauliflower Soup",
-  "item.veggiesdelight.cauliflower_burger": "Cauliflower Burger",
-  "item.veggiesdelight.whole_roasted_cauliflower": "Whole Roasted Cauliflower",
-
-  "item.veggiesdelight.sweet_potato": "Sweet Potato",
-  "item.veggiesdelight.baked_sweet_potato": "Baked Sweet Potato",
-  "item.veggiesdelight.mashed_potatoes": "Mashed Potatoes",
-  "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
-  "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
-  "item.veggiesdelight.sweet_potato_mochi": "Sweet Potato Mochi",
-  "item.veggiesdelight.sweet_potato_pie_slice": "Sweet Potato Pie Slice",
-  "item.veggiesdelight.potato_noodle": "Potato Noodle",
-  "item.veggiesdelight.potato_noodles": "Potato Noodles",
-
-  "item.veggiesdelight.garlic": "Garlic",
-  "item.veggiesdelight.garlic_clove": "Garlic Clove",
-  "item.veggiesdelight.roasted_garlic_clove": "Roasted Garlic Clove",
-  "item.veggiesdelight.garlic_bread": "Garlic Bread",
-  "item.veggiesdelight.garlic_rice_with_cauliflower": "Garlic Rice With Cauliflower",
-  "item.veggiesdelight.garlic_chicken_stew": "Garlic Chicken Stew",
-  "item.veggiesdelight.garlic_baked_cod": "Garlic Baked Cod",
-  "item.veggiesdelight.cesar_salad": "Cesar Salad",
-  "item.veggiesdelight.fermented_garlic_honey": "Fermented Garlic Honey",
-  "item.veggiesdelight.garlic_stuffed_mushrooms": "Garlic Stuffed Mushrooms",
-
   "item.veggiesdelight.broccoli": "Broccoli",
-  "item.veggiesdelight.broccoli_seeds": "Broccoli Seeds",
-
+  "item.veggiesdelight.cauliflower": "Cauliflower",
+  "item.veggiesdelight.dandelion_leaf": "Dandelion Leaf",
+  "item.veggiesdelight.garlic": "Garlic",
+  "item.veggiesdelight.sweet_potato": "Sweet Potato",
   "item.veggiesdelight.turnip": "Turnip",
-  "item.veggiesdelight.turnip_seeds": "Turnip Seeds",
-
   "item.veggiesdelight.zucchini": "Zucchini",
-  "item.veggiesdelight.zucchini_seeds": "Zucchini seeds",
 
+  "item.veggiesdelight.bellpepper_seeds": "Bell Pepper Seeds",
+  "item.veggiesdelight.broccoli_seeds": "Broccoli Seeds",
+  "item.veggiesdelight.cauliflower_seeds":"Cauliflower Seeds",
+  "item.veggiesdelight.turnip_seeds": "Turnip Seeds",
+  "item.veggiesdelight.zucchini_seeds": "Zucchini seeds",
 
   "block.veggiesdelight.bellpepper_crate": "Bell Pepper Crate",
   "block.veggiesdelight.broccoli_crate": "Broccoli Crate",
@@ -61,22 +24,6 @@
   "block.veggiesdelight.turnip_crate": "Turnip Crate",
   "block.veggiesdelight.zucchini_crate": "Zucchini Crate",
 
-  "item.veggiesdelight.dandelion_juice": "Dandelion Juice",
-  "item.veggiesdelight.dandelion_leaf": "Dandelion Leaf",
-  "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
-
-  "item.veggiesdelight.beetroot_brownie": "Beetroot Brownie",
-  "item.veggiesdelight.carrot_juice": "Carrot Juice",
-  "block.veggiesdelight.carrot_cake": "Carrot Cake",
-  "item.veggiesdelight.carrot_cake_slice": "Carrot Cake",
-  "item.veggiesdelight.fish_and_chips": "Fish And Chips",
-  "item.veggiesdelight.roasted_vegetables": "Roasted Vegetables",
-
-  "block.veggiesdelight.vegan_pizza": "Vegan Pizza",
-  "block.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
-  "block.veggiesdelight.beetroot_brownie_tray": "Beetroot Brownie Tray",
-
-  "block.veggiesdelight.mature_dandelion": "Mature Dandelion",
   "block.veggiesdelight.wild_bellpeppers": "Wild Bell Peppers",
   "block.veggiesdelight.wild_broccoli": "Wild Broccoli",
   "block.veggiesdelight.wild_cauliflowers": "Wild Cauliflowers",
@@ -84,8 +31,59 @@
   "block.veggiesdelight.wild_sweet_potatoes": "Wild Sweet Potatoes",
   "block.veggiesdelight.wild_turnips": "Wild Turnips",
   "block.veggiesdelight.wild_zucchinis": "Wild Zucchinis",
+  "block.veggiesdelight.mature_dandelion": "Mature Dandelion",
 
-  "creativetab.veggiesdelight_tab": "Veggies Delight",
+
+  "item.veggiesdelight.cacciatore": "Cacciatore",
+  "item.veggiesdelight.chicken_fajitas_wrap": "Chicken Fajitas Wrap",
+  "item.veggiesdelight.mhadjeb": "Mhadjeb",
+  "item.veggiesdelight.shakshouka": "Shakshouka",
+  "item.veggiesdelight.smoked_bellpepper": "Smoked Bell Pepper",
+  "item.veggiesdelight.stuffed_bellpeppers": "Stuffed Bell Peppers",
+  "item.veggiesdelight.uncooked_mhadjeb": "Uncooked Mhadjeb",
+  "block.veggiesdelight.vegan_pizza": "Vegan Pizza",
+  "item.veggiesdelight.vegan_pizza_slice": "Vegan Pizza Slice",
+
+  "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
+  "item.veggiesdelight.cauliflower_burger": "Cauliflower Burger",
+  "item.veggiesdelight.cauliflower_floret": "Cauliflower Floret",
+  "item.veggiesdelight.cauliflower_patty": "Cauliflower Patty",
+  "item.veggiesdelight.cauliflower_soup": "Cauliflower Soup",
+  "item.veggiesdelight.cooked_cauliflower_patty": "Cooked Cauliflower Patty",
+  "item.veggiesdelight.fried_cauliflower_floret": "Fried Cauliflower Floret",
+  "item.veggiesdelight.whole_roasted_cauliflower": "Whole Roasted Cauliflower",
+
+  "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
+  "item.veggiesdelight.dandelion_juice": "Dandelion Juice",
+
+  "item.veggiesdelight.cesar_salad": "Cesar Salad",
+  "item.veggiesdelight.fermented_garlic_honey": "Fermented Garlic Honey",
+  "item.veggiesdelight.garlic_baked_cod": "Garlic Baked Cod",
+  "item.veggiesdelight.garlic_bread": "Garlic Bread",
+  "item.veggiesdelight.garlic_chicken_stew": "Garlic Chicken Stew",
+  "item.veggiesdelight.garlic_clove": "Garlic Clove",
+  "item.veggiesdelight.garlic_rice_with_cauliflower": "Garlic Rice With Cauliflower",
+  "item.veggiesdelight.garlic_stuffed_mushrooms": "Garlic Stuffed Mushrooms",
+  "item.veggiesdelight.roasted_garlic_clove": "Roasted Garlic Clove",
+
+  "item.veggiesdelight.baked_sweet_potato": "Baked Sweet Potato",
+  "item.veggiesdelight.mashed_potatoes": "Mashed Potatoes",
+  "item.veggiesdelight.potato_noodle": "Potato Noodle",
+  "item.veggiesdelight.potato_noodles": "Potato Noodles",
+  "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
+  "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
+  "item.veggiesdelight.sweet_potato_mochi": "Sweet Potato Mochi",
+  "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
+  "item.veggiesdelight.sweet_potato_pie_slice": "Sweet Potato Pie Slice",
+
+  "item.veggiesdelight.beetroot_brownie": "Beetroot Brownie",
+  "block.veggiesdelight.beetroot_brownie_tray": "Beetroot Brownie Tray",
+  "block.veggiesdelight.carrot_cake": "Carrot Cake",
+  "item.veggiesdelight.carrot_cake_slice": "Carrot Cake",
+  "item.veggiesdelight.carrot_juice": "Carrot Juice",
+  "item.veggiesdelight.fish_and_chips": "Fish And Chips",
+  "item.veggiesdelight.roasted_vegetables": "Roasted Vegetables",
+
 
   "veggiesdelight.advancement.root": "Veggies Delight",
   "veggiesdelight.advancement.root.desc": "Go get your veggies!",
@@ -112,7 +110,7 @@
   "veggiesdelight.advancement.cauliflower.desc": "Make bread out of cauliflower",
 
   "veggiesdelight.advancement.cupcake": "I Came Here Just To Get A Cupcake",
-  "veggiesdelight.advancement.cupcake.desc":"Make a cupcake out of sweet potatoes",
+  "veggiesdelight.advancement.cupcake.desc": "Make a cupcake out of sweet potatoes",
 
   "veggiesdelight.advancement.pie": "Slice Of Life",
   "veggiesdelight.advancement.pie.desc": "Bake a sweet potato pie",
