Replaced 2 dishes Sweet potato mochi -> sweet potato pancakes Whole roasted cauliflower -> Cauliflower Kuku

--- a/src/main/resources/assets/veggiesdelight/lang/es_es.json
+++ b/src/main/resources/assets/veggiesdelight/lang/es_es.json
@@ -47,11 +47,11 @@
   "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
   "item.veggiesdelight.cauliflower_burger": "Hamburguesa de Coliflor",
   "item.veggiesdelight.cauliflower_floret": "Ramillete de Coliflor",
+  "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
   "item.veggiesdelight.cauliflower_patty": "Hamburguesa de Coliflor",
   "item.veggiesdelight.cauliflower_soup": "Sopa de Coliflor",
   "item.veggiesdelight.cooked_cauliflower_patty": "Hamburguesa de Coliflor Cocida",
   "item.veggiesdelight.fried_cauliflower_floret": "Ramillete de Coliflor Frito",
-  "item.veggiesdelight.whole_roasted_cauliflower": "Whole Roasted Cauliflower",
 
   "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
   "item.veggiesdelight.dandelion_juice": "Zumo de Diente de León",
@@ -72,7 +72,7 @@
   "item.veggiesdelight.potato_noodles": "Fideos de Patata",
   "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
   "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
-  "item.veggiesdelight.sweet_potato_mochi": "Sweet Potato Mochi",
+  "item.veggiesdelight.sweet_potato_pancakes": "Sweet Potato Pancakes",
   "item.veggiesdelight.sweet_potato_pie": "Tarta de Batata",
   "item.veggiesdelight.sweet_potato_pie_slice": "Porción de Tarta de Batata",
 
