--- a/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
+++ b/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
@@ -46,11 +46,11 @@
   "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
   "item.veggiesdelight.cauliflower_burger": "Burger de Chou-Fleur",
   "item.veggiesdelight.cauliflower_floret": "Fleur de Chou-Fleur",
+  "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
   "item.veggiesdelight.cauliflower_patty": "Galette de Chou-Fleur",
   "item.veggiesdelight.cauliflower_soup": "Soupe de Chou-Fleur",
   "item.veggiesdelight.cooked_cauliflower_patty": "Galette de Chou-Fleur Cuite",
   "item.veggiesdelight.fried_cauliflower_floret": "Fleur de Chou-Fleur Frite",
-  "item.veggiesdelight.whole_roasted_cauliflower": "Whole Roasted Cauliflower",
 
   "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
   "item.veggiesdelight.dandelion_juice": "Jus De Pissenlit",
@@ -71,7 +71,7 @@
   "item.veggiesdelight.potato_noodles": "Nouilles de Pommes de Terre",
   "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
   "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
-  "item.veggiesdelight.sweet_potato_mochi": "Sweet Potato Mochi",
+  "item.veggiesdelight.sweet_potato_pancakes": "Sweet Potato Pancakes",
   "item.veggiesdelight.sweet_potato_pie": "Tarte à la Patate Douce",
   "item.veggiesdelight.sweet_potato_pie_slice": "Part de Tarte à la Patate Douce",
 
