--- a/src/main/resources/assets/veggiesdelight/lang/ja_jp.json
+++ b/src/main/resources/assets/veggiesdelight/lang/ja_jp.json
@@ -47,11 +47,11 @@
   "item.veggiesdelight.cauliflower_bread": "カリフラワーブレッド",
   "item.veggiesdelight.cauliflower_burger": "カリフラワーバーガー",
   "item.veggiesdelight.cauliflower_floret": "カリフラワーの小房",
+  "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
   "item.veggiesdelight.cauliflower_patty": "未調理のカリフラワーハンバーグ",
   "item.veggiesdelight.cauliflower_soup": "カリフラワースープ",
   "item.veggiesdelight.cooked_cauliflower_patty": "カリフラワーハンバーグ",
   "item.veggiesdelight.fried_cauliflower_floret": "揚げたカリフラワーの小房",
-  "item.veggiesdelight.whole_roasted_cauliflower": "カリフラワーの丸焼き",
 
   "item.veggiesdelight.dandelion_and_eggs": "タンポポの葉と卵のサラダ",
   "item.veggiesdelight.dandelion_juice": "タンポポジュース",
@@ -72,7 +72,7 @@
   "item.veggiesdelight.potato_noodles": "芋麺",
   "item.veggiesdelight.sweet_potato_cupcake": "さつまいものカップケーキ",
   "item.veggiesdelight.sweet_potato_dough": "サツマイモ生地",
-  "item.veggiesdelight.sweet_potato_mochi": "さつまいも餅",
+  "item.veggiesdelight.sweet_potato_pancakes": "Sweet Potato Pancakes",
   "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
   "item.veggiesdelight.sweet_potato_pie_slice": "一切れのさつまいもパイ",
 
