--- a/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
+++ b/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
@@ -47,11 +47,11 @@
   "item.veggiesdelight.cauliflower_bread": "Хлеб из цветной капусты",
   "item.veggiesdelight.cauliflower_burger": "Бургер с цветной капустой",
   "item.veggiesdelight.cauliflower_floret": "Соцветия цветной капусты",
+  "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
   "item.veggiesdelight.cauliflower_patty": "Котлета из цветной капусты",
   "item.veggiesdelight.cauliflower_soup": "Суп из цветной капусты",
   "item.veggiesdelight.cooked_cauliflower_patty": "Котлета из вареной цветной капусты",
   "item.veggiesdelight.fried_cauliflower_floret": "Жареные соцветия цветной капусты",
-  "item.veggiesdelight.whole_roasted_cauliflower": "Целая запечённая цветная капуста",
 
   "item.veggiesdelight.dandelion_and_eggs": "Зелень одуванчика с яичницей",
   "item.veggiesdelight.dandelion_juice": "Сок из одуванчика",
@@ -72,7 +72,7 @@
   "item.veggiesdelight.potato_noodles": "Картофельная лапша",
   "item.veggiesdelight.sweet_potato_cupcake": "Кекс из батата",
   "item.veggiesdelight.sweet_potato_dough": "Тесто из батата",
-  "item.veggiesdelight.sweet_potato_mochi": "Моти из батата",
+  "item.veggiesdelight.sweet_potato_pancakes": "Sweet Potato Pancakes",
   "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
   "item.veggiesdelight.sweet_potato_pie_slice": "Кусочек пирога с бататом",
 
