--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -47,11 +47,11 @@
   "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
   "item.veggiesdelight.cauliflower_burger": "Cauliflower Burger",
   "item.veggiesdelight.cauliflower_floret": "Cauliflower Floret",
+  "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
   "item.veggiesdelight.cauliflower_patty": "Cauliflower Patty",
   "item.veggiesdelight.cauliflower_soup": "Cauliflower Soup",
   "item.veggiesdelight.cooked_cauliflower_patty": "Cooked Cauliflower Patty",
   "item.veggiesdelight.fried_cauliflower_floret": "Fried Cauliflower Floret",
-  "item.veggiesdelight.whole_roasted_cauliflower": "Whole Roasted Cauliflower",
 
   "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
   "item.veggiesdelight.dandelion_juice": "Dandelion Juice",
@@ -72,7 +72,7 @@
   "item.veggiesdelight.potato_noodles": "Potato Noodles",
   "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
   "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
-  "item.veggiesdelight.sweet_potato_mochi": "Sweet Potato Mochi",
+  "item.veggiesdelight.sweet_potato_pancakes": "Sweet Potato Pancakes",
   "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
   "item.veggiesdelight.sweet_potato_pie_slice": "Sweet Potato Pie Slice",
 
