--- a/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
+++ b/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
@@ -47,11 +47,11 @@
     "item.veggiesdelight.cauliflower_bread": "花椰菜面包",
     "item.veggiesdelight.cauliflower_burger": "花椰菜汉堡",
     "item.veggiesdelight.cauliflower_floret": "花椰菜花球",
+    "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
     "item.veggiesdelight.cauliflower_patty": "生花椰菜蛋饼",
     "item.veggiesdelight.cauliflower_soup": "花椰菜奶油浓汤",
     "item.veggiesdelight.cooked_cauliflower_patty": "熟花椰菜蛋饼",
     "item.veggiesdelight.fried_cauliflower_floret": "香烤花椰菜花球",
-    "item.veggiesdelight.whole_roasted_cauliflower": "整烤花椰菜",
 
     "item.veggiesdelight.dandelion_and_eggs": "蒲公英叶煎蛋",
     "item.veggiesdelight.dandelion_juice": "蒲公英汁",
@@ -72,7 +72,7 @@
     "item.veggiesdelight.potato_noodles": "煮粉条",
     "item.veggiesdelight.sweet_potato_cupcake": "红薯纸杯蛋糕",
     "item.veggiesdelight.sweet_potato_dough": "红薯面团",
-    "item.veggiesdelight.sweet_potato_mochi": "红薯麻糬",
+    "item.veggiesdelight.sweet_potato_pancakes": "Sweet Potato Pancakes",
     "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
     "item.veggiesdelight.sweet_potato_pie_slice": "红薯派切片",
 
